# ihacdn-server-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.example
src/: config.rs  main.rs  notifier.rs  purge.rs  state.rs  templating.rs  track.rs
src/routes/: mod.rs  reader.rs  uploads.rs
templates/: index.html  paste.html
